--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -16,3 +16,8 @@ gap: 1rem;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
 }
+.addSection{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:1rem;
+}
